# finalproject

./: CMakeLists.txt  README.md  main.c
data/: raw.json
lib/: CMakeLists.txt
lib/include/: common.h  laureates.h  strings.h
lib/include/collections/: slice_test.h
lib/include/main/: b_link_tree.h  b_link_tree_test.h
lib/include/threads/: threadpool.h
lib/src/: laureates.c  strings.c
lib/src/collections/: slice.c  slice_test.c  stack.c  stack_test.c
lib/src/io/: ioutil.c  ioutil_test.c
lib/src/main/: b_link_tree.c  b_link_tree_test.c
lib/src/threads/: threadpool.c
scripts/: serialize.py
