add_library(lib src/laureates.c include/laureates.h include/common.h include/strings.h src/strings.c src/strings_test.c include/strings_test.h src/laureates_test.c include/laureates_test.h src/collections/slice.c src/collections/slice_test.c include/collections/slice.h include/collections/slice_test.h src/io/ioutil.c include/io/ioutil.h src/io/ioutil_test.c include/io/ioutil_test.h src/collections/stack.c src/collections/stack_test.c include/collections/stack.h include/collections/stack_test.h src/main/b_link_tree.c src/main/b_link_tree_test.c include/main/b_link_tree.h include/main/b_link_tree_test.h src/threads/threadpool.c src/threads/threadpool_test.c include/threads/threadpool.h include/threads/threadpool_test.h)
target_include_directories(lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)